add expecteds for chi square test

--- a/COVID-Support-Loss-Analytic-Code.html
+++ b/COVID-Support-Loss-Analytic-Code.html
@@ -1128,6 +1128,35 @@ median_r
 </div>
 <div id="main-analysis" class="section level1">
 <h1>Main analysis</h1>
+<pre><code>## [1] &quot;Expected values for the Chi-square test of supportLoss, sex&quot;
+##        
+##           Female     Male
+##   FALSE 122.5735 34.42651
+##   TRUE  201.4265 56.57349
+## [1] &quot;Expected values for the Chi-square test of supportLoss, ethnicity&quot;
+##        
+##         Asian non-Hispanic Black non-Hispanic Hispanic Multi non-Hispanic
+##   FALSE           40.47952           7.566265  25.7253           8.701205
+##   TRUE            66.52048          12.433735  42.2747          14.298795
+##        
+##         White non-Hispanic
+##   FALSE           74.52771
+##   TRUE           122.47229
+## [1] &quot;Expected values for the Chi-square test of supportLoss, genderMinority&quot;
+##        
+##            FALSE     TRUE
+##   FALSE 151.7036 5.296386
+##   TRUE  249.2964 8.703614
+## [1] &quot;Expected values for the Chi-square test of supportLoss, sexualMinority&quot;
+##        
+##            FALSE     TRUE
+##   FALSE 110.8458 46.15422
+##   TRUE  182.1542 75.84578
+## [1] &quot;Expected values for the Chi-square test of supportLoss, SI&quot;
+##        
+##            FALSE    TRUE
+##   FALSE 114.2506 42.7494
+##   TRUE  187.7494 70.2506</code></pre>
 <table class="table" style="margin-left: auto; margin-right: auto;">
 <thead>
 <tr>
