--- a/COVID-Support-Loss-Analytic-Code.html
+++ b/COVID-Support-Loss-Analytic-Code.html
@@ -990,6 +990,9 @@ shelterInPlace
 <div id="internal-consistency" class="section level1">
 <h1>Internal consistency</h1>
 <table class="table" style="margin-left: auto; margin-right: auto;">
+<caption>
+Internal consistency for GAD7
+</caption>
 <thead>
 <tr>
 <th style="text-align:left;">
@@ -1058,6 +1061,9 @@ median_r
 </tbody>
 </table>
 <table class="table" style="margin-left: auto; margin-right: auto;">
+<caption>
+Internal consistency for PHQ
+</caption>
 <thead>
 <tr>
 <th style="text-align:left;">
