--- a/COVID-Support-Loss-Analytic-Code.html
+++ b/COVID-Support-Loss-Analytic-Code.html
@@ -211,23 +211,40 @@ pre code {
 </div>
 <div id="support-loss-by-covid-impacts" class="section level1">
 <h1>Support loss by COVID impacts</h1>
+<pre><code>## # A tibble: 14 x 5
+##    impactType          impactPresence.m impactPresence.n     n impactPresence   
+##    &lt;chr&gt;                          &lt;dbl&gt;            &lt;int&gt; &lt;int&gt; &lt;chr&gt;            
+##  1 impact.childcare             0.00964                4   415 0.96% (4 of 415) 
+##  2 impact.edRemote              0.978                406   415 97.83% (406 of 4~
+##  3 impact.extraHours            0.0843                35   415 8.43% (35 of 415)
+##  4 impact.hadToWork             0.0771                32   415 7.71% (32 of 415)
+##  5 impact.illnessOfCo~          0.152                 63   415 15.18% (63 of 41~
+##  6 impact.jobLoss               0.422                175   415 42.17% (175 of 4~
+##  7 impact.jobRemote             0.198                 82   415 19.76% (82 of 41~
+##  8 impact.livingSitua~          0.422                175   415 42.17% (175 of 4~
+##  9 impact.mandQuarant~          0.0940                39   415 9.40% (39 of 415)
+## 10 impact.other                 0.0675                28   415 6.75% (28 of 415)
+## 11 impact.relativesMo~          0.205                 85   415 20.48% (85 of 41~
+## 12 impact.reunitedWit~          0.308                128   415 30.84% (128 of 4~
+## 13 impact.selfQuarant~          0.424                176   415 42.41% (176 of 4~
+## 14 impact.shelterInPl~          0.684                284   415 68.43% (284 of 4~</code></pre>
 <pre><code>## # A tibble: 14 x 3
-##    `Impact Type`    `Support Loss`     `No Loss`         
-##    &lt;chr&gt;            &lt;chr&gt;              &lt;chr&gt;             
-##  1 childcare        0.8% (2 of 258)    1.3% (2 of 157)   
-##  2 edRemote         97.3% (251 of 258) 98.7% (155 of 157)
-##  3 extraHours       8.1% (21 of 258)   8.9% (14 of 157)  
-##  4 hadToWork        9.7% (25 of 258)   4.5% (7 of 157)   
-##  5 illnessOfContact 17.8% (46 of 258)  10.8% (17 of 157) 
-##  6 jobLoss          45.7% (118 of 258) 36.3% (57 of 157) 
-##  7 jobRemote        19.4% (50 of 258)  20.4% (32 of 157) 
-##  8 livingSituation  48.4% (125 of 258) 31.8% (50 of 157) 
-##  9 mandQuarantine   11.6% (30 of 258)  5.7% (9 of 157)   
-## 10 other            7.0% (18 of 258)   6.4% (10 of 157)  
-## 11 relativesMovedIn 23.6% (61 of 258)  15.3% (24 of 157) 
-## 12 reunitedWithFam  31.8% (82 of 258)  29.3% (46 of 157) 
-## 13 selfQuarantine   43.4% (112 of 258) 40.8% (64 of 157) 
-## 14 shelterInPlace   71.3% (184 of 258) 63.7% (100 of 157)</code></pre>
+##    `Impact Type`    `Support Loss`      `No Loss`          
+##    &lt;chr&gt;            &lt;chr&gt;               &lt;chr&gt;              
+##  1 childcare        0.78% (2 of 258)    1.27% (2 of 157)   
+##  2 edRemote         97.29% (251 of 258) 98.73% (155 of 157)
+##  3 extraHours       8.14% (21 of 258)   8.92% (14 of 157)  
+##  4 hadToWork        9.69% (25 of 258)   4.46% (7 of 157)   
+##  5 illnessOfContact 17.83% (46 of 258)  10.83% (17 of 157) 
+##  6 jobLoss          45.74% (118 of 258) 36.31% (57 of 157) 
+##  7 jobRemote        19.38% (50 of 258)  20.38% (32 of 157) 
+##  8 livingSituation  48.45% (125 of 258) 31.85% (50 of 157) 
+##  9 mandQuarantine   11.63% (30 of 258)  5.73% (9 of 157)   
+## 10 other            6.98% (18 of 258)   6.37% (10 of 157)  
+## 11 relativesMovedIn 23.64% (61 of 258)  15.29% (24 of 157) 
+## 12 reunitedWithFam  31.78% (82 of 258)  29.30% (46 of 157) 
+## 13 selfQuarantine   43.41% (112 of 258) 40.76% (64 of 157) 
+## 14 shelterInPlace   71.32% (184 of 258) 63.69% (100 of 157)</code></pre>
 </div>
 <div id="internal-consistency" class="section level1">
 <h1>Internal consistency</h1>
